fixed spacings

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -181,7 +181,7 @@ h1, h2, h3, h4, h5, h6, .preview {
 
 @media screen and (max-width: 767px) {
   .mt-5 {
-    margin-top: -4px !important;
+    margin-top: 30px !important;
   }
 
   .mt-5.news {
